--- a/health_tracker/templates/partials/prediction.html
+++ b/health_tracker/templates/partials/prediction.html
@@ -1,1 +1,1 @@
-<span>Difficulty of this route for you: {{context['prediction']}}</span>
+<span>Difficulty of this route for you: {{ prediction }}</span>
