--- a/health_tracker/templates/login.html
+++ b/health_tracker/templates/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,5 +19,31 @@
         <p>{{ form.submit() }}</p>
     </form>
     <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <title>Login</title>
+</head>
+<body>
+    <div class="login-container">
+        <h1>Login</h1>
+        <form method="POST" action="{{ url_for('login') }}">
+            {{ form.hidden_tag() }}
+            <p class="forms">
+                {{ form.username.label }}<br>
+                {{ form.username(size=32) }}
+            </p>
+            <p class="forms">
+                {{ form.password.label }}<br>
+                {{ form.password(size=32) }}
+            </p>
+            <p class="submit">{{ form.submit() }}</p>
+        </form>
+        <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
+    </div>
 </body>
 </html>
