--- a/health_tracker/templates/partials/activities.html
+++ b/health_tracker/templates/partials/activities.html
@@ -1,35 +1,37 @@
-<div class="table-container">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Distance (km)</th>
-                <th>Time (minutes)</th>
-                <th>Average Heart Rate (bpm)</th>
-                <th>Total Ascent (m)</th>
-                <th>Difficulty</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for activity in context['activities'] %}
-            <tr>
-                <td>{{ activity.udaljenost }}</td>
-                <td>{{ activity.vrijeme }}</td>
-                <td>{{ activity.prosjecni_puls }}</td>
-                <td>{{ activity.ukupni_uspon }}</td>
-                <td>{{ activity.tezina }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<div id="activities" class="placeholder" hx-get="/activities?page={{ pagination['page'] }}&per_page={{pagination['per_page']}}" hx-swap="outerHTML" hx-trigger="every 5s">
+    <div class="table-container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Distance (km)</th>
+                    <th>Time (minutes)</th>
+                    <th>Average Heart Rate (bpm)</th>
+                    <th>Total Ascent (m)</th>
+                    <th>Difficulty</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for activity in pagination['activities'] %}
+                <tr>
+                    <td>{{ activity.udaljenost }}</td>
+                    <td>{{ activity.vrijeme }}</td>
+                    <td>{{ activity.prosjecni_puls }}</td>
+                    <td>{{ activity.ukupni_uspon }}</td>
+                    <td>{{ activity.tezina }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-    <!-- Pagination controls -->
-    <div class="d-flex justify-content-between">
-        {% if context['page'] > 1 %}
-        <button class="btn btn-primary" hx-get="/activities?page={{ context['page'] - 1 }}&per_page={{ context['per_page'] }}" hx-target="#activities" hx-swap="innerHTML">Previous</button>
-        {% endif %}
-        <span>Page {{ context['page'] }} of {{ (context['total_activities'] // context['per_page']) + 1 }}</span>
-        {% if context['page'] < (context['total_activities'] // context['per_page']) + 1 %}
-        <button class="btn btn-primary" hx-get="/activities?page={{ context['page'] + 1 }}&per_page={{ context['per_page'] }}" hx-target="#activities" hx-swap="innerHTML">Next</button>
-        {% endif %}
+        <!-- Pagination controls -->
+        <div class="d-flex justify-content-between">
+            {% if pagination['page'] > 1 %}
+            <button class="btn btn-primary" hx-get="/activities?page={{ pagination['page'] - 1 }}&per_page={{ pagination['per_page'] }}" hx-target="#activities" hx-swap="innerHTML">Previous</button>
+            {% endif %}
+            <span>Page {{ pagination['page'] }} of {{ (pagination['total_activities'] // pagination['per_page']) + 1 }}</span>
+            {% if pagination['page'] < (pagination['total_activities'] // pagination['per_page']) + 1 %}
+            <button class="btn btn-primary" hx-get="/activities?page={{ pagination['page'] + 1 }}&per_page={{ pagination['per_page'] }}" hx-target="#activities" hx-swap="innerHTML">Next</button>
+            {% endif %}
+        </div>
     </div>
 </div>
